tests/macros/raw_select/editor.stderr
error: option `editor` does not exist for kind `raw_select`
 --> tests/macros/raw_select/editor.rs:2:47
  |
2 |     let q = requestty::questions![RawSelect { editor: todo!() }];
  |                                               ^^^^^^
