tests/macros/raw_select/editor.rs
fn main() {
    let q = requestty::questions![RawSelect { editor: todo!() }];
}
